Se agerga fonts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Nuestra Boda! Lulu & Diego</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- Aquí vamos a cargar una fuente personalizada o ajustar las de Google Fonts -->
     <!-- Por ahora, mantendremos las de Google Fonts e intentaremos aproximar con CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
     <section class="wedding-details">
         <h2 class="section-title">Nuestra boda</h2>
         <div class="date-icon">
-            <img src="1.png">
+            <img src="./1.png">
         </div>
         <p class="wedding-date">28 de Febrero 2026</p>
         <p class="countdown-label">Falta poco</p>
@@ -83,7 +83,7 @@
     <section class="events-location">
         <div class="event-card">
             <div class="icon-circle">
-                <img src="2.png" alt="Iglesia">
+                <img src="./2.png" alt="Iglesia">
             </div>
             <h4>Ceremonia</h4>
             <p>10:00 AM</p>
@@ -94,7 +94,7 @@
         </div>
         <div class="event-card">
             <div class="icon-circle">
-                <img src="3.png">
+                <img src="./3.png">
             </div>
             <h4>Celebración</h4>
             <p>14:00 PM</p>
@@ -115,7 +115,7 @@
                 <p>Zapatos</p>
             </div>
             <div class="dress-code-icon">
-                <img src="4.png" alt="Icono de vestimenta">
+                <img src="./4.png" alt="Icono de vestimenta">
             </div>
             <div class="dress-code-item">
                 <p class="role">Ellas</p>
