--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- La cita de abajo se moverá a la parte superior como en tu diseño -->
             <!-- <p class="quote">El amor eterno es lo que permanece <br> y lo que se multiplica en el camino <br> que iniciamos juntos, hoy y para siempre.</p> -->
         </div>
-        <img src="https://image.pollinations.ai/prompt/photorealistic%20image%20of%20a%20happy%20couple%20walking%20hand%20in%20hand%20in%20a%20beautiful%20garden%20with%20cherry%20blossoms%20and%20a%20red%20torii%20gate%20in%20the%20background,%20sunny%20day,%20natural%20light" alt="Julia y Diego felices" class="hero-image">
+        <img src="./FOTO1.png" alt="Julia y Diego felices" class="hero-image">
         <p class="intro-text">El día más especial será compartir nuestro amor con ustedes. ¡Los esperamos con mucho cariño!</p>
     </header>
 
@@ -53,9 +53,9 @@
     </section>
 
     <section class="photo-gallery">
-        <img src="https://image.pollinations.ai/prompt/photorealistic%20image%20of%20a%20couple%20laughing%20and%20looking%20at%20each%20other%20in%20a%20romantic%20garden,%20soft%20light" alt="Pareja feliz 1">
-        <img src="https://image.pollinations.ai/prompt/photorealistic%20image%20of%20a%20couple%20walking%20near%20a%20small%20pond%20with%20trees%20in%20a%20japanese%20garden,%20romantic" alt="Pareja feliz 2">
-        <img src="https://image.pollinations.ai/prompt/photorealistic%20image%20of%20a%20couple%20walking%20towards%20a%20red%20torii%20gate%20in%20a%20garden,%20backlight" alt="Pareja feliz 3">
+        <img src="FOTO2.jpg" alt="Pareja feliz 1">
+        <img src="FOTO3.jpg" alt="Pareja feliz 2">
+        <img src="FOTO4.jpg" alt="Pareja feliz 3">
         <p class="gallery-quote">El amor eterno es lo que permanece <br> y lo que se multiplica en el camino <br> que iniciamos juntos, hoy y para siempre.</p>
     </section>
 
@@ -78,7 +78,7 @@
         <p class="names">Carlos Valentin Llerena</p>
     </section>
 
-    <img src="https://image.pollinations.ai/prompt/photorealistic%20image%20of%20a%20couple%20posing%20under%20a%20red%20torii%20gate%20in%20a%20traditional%20japanese%20garden,%20romantic,%20happy" alt="Pareja principal con torii" class="main-couple-image">
+    <img src="FOTO5.jpg">
 
     <section class="events-location">
         <div class="event-card">
