Se ageegan fotos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="wedding-details">
         <h2 class="section-title">Nuestra boda</h2>
         <div class="date-icon">
-            <img src="./1.png">
+            <img src="./ANILLOS.png">
         </div>
         <p class="wedding-date">28 de Febrero 2026</p>
         <p class="countdown-label">Falta poco</p>
@@ -53,8 +53,8 @@
     </section>
 
     <section class="photo-gallery">
-        <img src="FOTO2.jpg" alt="Pareja feliz 1">
-        <img src="FOTO3.jpg" alt="Pareja feliz 2">
+        <img src="FOTO2.JPG" alt="Pareja feliz 1">
+        <img src="FOTO3.JPG" alt="Pareja feliz 2">
         <img src="FOTO4.jpg" alt="Pareja feliz 3">
         <p class="gallery-quote">El amor eterno es lo que permanece <br> y lo que se multiplica en el camino <br> que iniciamos juntos, hoy y para siempre.</p>
     </section>
