Se agrega nuevo stilos

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="events-location">
         <div class="event-card">
             <div class="icon-circle">
-                <img src="./2.png" alt="Iglesia">
+                <img src="./IGLESIA.png" alt="Iglesia">
             </div>
             <h4>Ceremonia</h4>
             <p>10:00 AM</p>
@@ -94,7 +94,7 @@
         </div>
         <div class="event-card">
             <div class="icon-circle">
-                <img src="./3.png">
+                <img src="./CELEBRACION.png">
             </div>
             <h4>Celebración</h4>
             <p>14:00 PM</p>
