Se agrega nueva vestimetna

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <p>Zapatos</p>
             </div>
             <div class="dress-code-icon">
-                <img src="./4.png" alt="Icono de vestimenta">
+                <img src="./VESTIMENTA.png" alt="Icono de vestimenta">
             </div>
             <div class="dress-code-item">
                 <p class="role">Ellas</p>
