Se agrega nuevo push

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="dress-code-item">
                 <p class="role">Ellos</p>
                 <p>Traje formal</p>
-                <p>Color Azul</p>
+                <p>Corbata</p>
                 <p>Zapatos</p>
             </div>
             <div class="dress-code-icon">
@@ -119,8 +119,8 @@
             </div>
             <div class="dress-code-item">
                 <p class="role">Ellas</p>
+                <p>No blanco</p>
                 <p>Vestido largo</p>
-                <p>Color Nude</p>
                 <p>Tacones</p>
             </div>
         </div>
