--- a/index.html
+++ b/index.html
@@ -5,30 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Nuestra Boda! Lulu & Diego</title>
     <link rel="stylesheet" href="./style.css">
-    <!-- Aquí vamos a cargar una fuente personalizada o ajustar las de Google Fonts -->
-    <!-- Por ahora, mantendremos las de Google Fonts e intentaremos aproximar con CSS -->
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Si necesitamos una fuente muy específica, podríamos cargarla así: -->
-    <!-- <link href="url-a-tu-fuente-personalizada.woff2" rel="preload" as="font" crossorigin> -->
+    <!-- Fuentes de Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Sacramento para los nombres y "Nos casamos!" se parece más a tu diseño -->
 </head>
 <body>
     <header class="hero">
-        <div class="header-decoration-top"></div>
+        <!-- Flor de decoración superior -->
+        <img src="URL_DE_TU_IMAGEN_DE_FLORES.png" alt="Arreglo floral azul" class="header-decoration-top-image">
+        
         <div class="names-section">
             <p class="small-text-top-quote">El destino nos puso en el mismo camino y ahora caminaremos juntos hasta el fin.</p>
             <p class="small-text">¡Nos casamos!</p>
             <h1 class="couple-names">Lulu <span class="heart-icon"></span> Diego</h1>
-            <!-- La cita de abajo se moverá a la parte superior como en tu diseño -->
-            <!-- <p class="quote">El amor eterno es lo que permanece <br> y lo que se multiplica en el camino <br> que iniciamos juntos, hoy y para siempre.</p> -->
         </div>
-        <img src="./FOTO1.png" alt="Julia y Diego felices" class="hero-image">
+        <img src="./FOTO1.png" alt="Lulu y Diego felices" class="hero-image">
         <p class="intro-text">El día más especial será compartir nuestro amor con ustedes. ¡Los esperamos con mucho cariño!</p>
     </header>
 
     <section class="wedding-details">
         <h2 class="section-title">Nuestra boda</h2>
         <div class="date-icon">
-            <img src="./ANILLOS.png">
+            <img src="./ANILLOS.png" alt="Anillo de boda">
         </div>
         <p class="wedding-date">28 de Febrero 2026</p>
         <p class="countdown-label">Falta poco</p>
@@ -53,9 +51,9 @@
     </section>
 
     <section class="photo-gallery">
-        <img src="FOTO2.JPG" alt="Pareja feliz 1">
-        <img src="FOTO3.JPG" alt="Pareja feliz 2">
-        <img src="FOTO4.jpg" alt="Pareja feliz 3">
+        <img src="./FOTO2.JPG" alt="Pareja feliz 1">
+        <img src="./FOTO3.JPG" alt="Pareja feliz 2">
+        <img src="./FOTO4.jpg" alt="Pareja feliz 3">
         <p class="gallery-quote">El amor eterno es lo que permanece <br> y lo que se multiplica en el camino <br> que iniciamos juntos, hoy y para siempre.</p>
     </section>
 
@@ -78,7 +76,7 @@
         <p class="names">Carlos Valentin Llerena</p>
     </section>
 
-    <img src="FOTO5.jpg">
+    <img src="./FOTO5.jpg" alt="Pareja principal con torii" class="main-couple-image">
 
     <section class="events-location">
         <div class="event-card">
@@ -94,7 +92,7 @@
         </div>
         <div class="event-card">
             <div class="icon-circle">
-                <img src="./CELEBRACION.png">
+                <img src="./CELEBRACION.png" alt="Celebración">
             </div>
             <h4>Celebración</h4>
             <p>14:00 PM</p>
@@ -128,7 +126,8 @@
     </section>
 
     <section class="gift-registry">
-        <div class="gift-registry-decoration"></div>
+        <!-- Decoración floral de regalo - Usaremos una nueva generada -->
+        <div class="gift-registry-decoration"></div> 
         <h3>Mesa de regalos</h3>
         <p>Tu presencia es el mejor regalo, si deseas tener un detalle con nosotros, ¡aquí encontrarás algunas opciones.</p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Logo Amazon" class="amazon-logo">
@@ -142,6 +141,7 @@
     </section>
 
     <footer class="footer-text">
+        <!-- Decoración floral del footer - Usaremos una nueva generada -->
         <div class="footer-decoration"></div>
         <p>¡Te esperamos!</p>
     </footer>
