--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="hero">
-    <!-- Flor superior -->
-    <img src="FLORES1.png" alt="Arreglo floral azul" class="header-decoration-top-image">
 
+  <!-- HERO -->
+  <header class="hero">
+    <img src="FLORES1.png" alt="Arreglo floral azul" class="header-decoration-top-image">
+    
     <div class="names-section">
       <p class="small-text-top-quote">El destino nos puso en el mismo camino y ahora caminaremos juntos hasta el fin.</p>
       <p class="small-text">¡Nos casamos!</p>
@@ -22,22 +23,13 @@
     <p class="intro-text">El día más especial será compartir nuestro amor con ustedes. ¡Los esperamos con mucho cariño!</p>
   </header>
 
-  <!-- CARRUSEL -->
-  <section class="carousel">
-    <div class="carousel-track">
-      <img src="./FOTO2.JPG" alt="Pareja feliz 1">
-      <img src="./FOTO3.JPG" alt="Pareja feliz 2">
-      <img src="./FOTO4.jpg" alt="Pareja feliz 3">
-    </div>
-    <div class="carousel-dots" aria-label="Indicadores de carrusel"></div>
-  </section>
-  <p class="carousel-quote">El amor eterno es lo que permanece <br> y lo que se multiplica en el camino <br> que iniciamos juntos, hoy y para siempre.</p>
-
+  <!-- NUESTRA BODA + CONTADOR -->
   <section class="wedding-details">
     <h2 class="section-title">Nuestra boda</h2>
     <div class="date-icon"><img src="./ANILLOS.png" alt="Anillos"></div>
     <p class="wedding-date">28 de Febrero 2026</p>
     <p class="countdown-label">Falta poco</p>
+
     <div id="countdown" class="countdown-timer">
       <div><span class="number" id="days">00</span><span class="unit">DÍAS</span></div>
       <div><span class="number" id="hours">00</span><span class="unit">HORAS</span></div>
@@ -46,8 +38,26 @@
     </div>
   </section>
 
+  <!-- CARRUSEL (después de contador) -->
+  <section class="carousel">
+    <div class="carousel-track">
+      <img src="./FOTO2.JPG" alt="Pareja feliz 1">
+      <img src="./FOTO3.JPG" alt="Pareja feliz 2">
+      <img src="./FOTO4.jpg" alt="Pareja feliz 3">
+    </div>
+    <div class="carousel-dots"></div>
+  </section>
+
+  <p class="carousel-quote">
+    El amor eterno es lo que permanece <br>
+    y lo que se multiplica en el camino <br>
+    que iniciamos juntos, hoy y para siempre.
+  </p>
+
+  <!-- PADRES -->
   <section class="parents-info">
     <h3>Bendecidos por nuestros amados y respetados padres</h3>
+
     <div class="parents-grid">
       <div>
         <p class="role">Padres de la novia:</p>
@@ -60,34 +70,38 @@
         <p class="names">Gloria De Los Queredo de Cruz</p>
       </div>
     </div>
+
     <h3>Nuestros padrinos</h3>
     <p class="names">Vanessa Valdes Maldonado</p>
-    <p class="names">Carlos Valentin Llerena</p>
+    <p class="names">Carlos Valentín Llerena</p>
   </section>
 
-  <img src="./FOTO5.jpg" alt="Pareja principal con torii" class="main-couple-image">
+  <img src="./FOTO5.jpg" alt="Foto Especial" class="main-couple-image">
 
+  <!-- EVENTOS -->
   <section class="events-location">
     <div class="event-card">
       <div class="icon-circle"><img src="./IGLESIA.png" alt="Iglesia"></div>
       <h4>Ceremonia</h4>
       <p>10:00 AM</p>
       <p>Iglesia Nuestra Señora de la Candelaria</p>
-      <p>Av. Popocatépetl 1900, Col. Anaya, Benito Juárez, 03340</p>
+      <p>Av. Popocatépetl 1900, Col. Anaya, Benito Juárez</p>
       <p>Ciudad de México, CDMX</p>
-      <a href="https://maps.app.goo.gl/tu-link-de-mapa-ceremonia" target="_blank" class="map-button">Ver mapa</a>
+      <a href="#" class="map-button" target="_blank">Ver mapa</a>
     </div>
+
     <div class="event-card">
       <div class="icon-circle"><img src="./CELEBRACION.png" alt="Celebración"></div>
       <h4>Celebración</h4>
       <p>14:00 PM</p>
       <p>Salón de eventos Blancas</p>
-      <p>11 de Agosto de 1855 907, Lojas de Reforma Ave Secc,</p>
-      <p>Campestre, 03110 Ciudad de México, CDMX</p>
-      <a href="https://maps.app.goo.gl/tu-link-de-mapa-celebracion" target="_blank" class="map-button">Ver mapa</a>
+      <p>11 de Agosto de 1855 907, Campestre</p>
+      <p>Ciudad de México, CDMX</p>
+      <a href="#" class="map-button" target="_blank">Ver mapa</a>
     </div>
   </section>
 
+  <!-- VESTIMENTA -->
   <section class="dress-code">
     <h3>Código de vestimenta</h3>
     <div class="dress-code-details">
@@ -97,7 +111,9 @@
         <p>Corbata</p>
         <p>Zapatos</p>
       </div>
-      <div class="dress-code-icon"><img src="./VESTIMENTA.png" alt="Icono de vestimenta"></div>
+
+      <div class="dress-code-icon"><img src="./VESTIMENTA.png" alt="Icono Vestimenta"></div>
+
       <div class="dress-code-item">
         <p class="role">Ellas</p>
         <p>No blanco</p>
@@ -108,13 +124,15 @@
     <a href="#" class="inspiration-link">Link Inspiración</a>
   </section>
 
+  <!-- MESA DE REGALOS -->
   <section class="gift-registry">
     <div class="gift-registry-decoration"></div>
     <h3>Mesa de regalos</h3>
-    <p>Tu presencia es el mejor regalo, si deseas tener un detalle con nosotros, ¡aquí encontrarás algunas opciones.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Logo Amazon" class="amazon-logo">
+    <p>Tu presencia es el mejor regalo, si deseas tener un detalle con nosotros, aquí encontrarás algunas opciones.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon" class="amazon-logo">
   </section>
 
+  <!-- CONFIRMACIÓN -->
   <section class="confirmation">
     <h3>Confirmación</h3>
     <p>¡Esperamos tu asistencia!</p>
@@ -122,6 +140,7 @@
     <button class="confirm-button">No podré asistir</button>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer-text">
     <div class="footer-decoration"></div>
     <p>¡Te esperamos!</p>
